# AMIP

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: SPECIFICATION.md
