[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AMIP"
version = "1.0.0"
description = "AI-Machine Interface Protocol: hardware-agnostic middleware connecting AI brains to robots safely."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["robotics", "ai", "middleware", "ros", "hardware-abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/ORIGIN-HQ/AMIP"
Repository = "https://github.com/ORIGIN-HQ/AMIP.git"
Issues = "https://github.com/ORIGIN-HQ/AMIP/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["AMIP*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["AMIP"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
pretty = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = []
